--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -200,3 +200,97 @@ nav {
     background: transparent;
   }
 }
+
+/*
+=============== 
+Form Styles
+===============
+*/
+
+* {
+  box-sizing: border-box;
+}
+
+.center {
+  text-align: center;
+}
+
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+  text-align: center;
+}
+
+input[type="submit"] {
+  width: 95%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  float: right;
+}
+
+input[type="submit"]:hover {
+  background-color: #363b36;
+}
+
+.container {
+  border-radius: 5px;
+  background: var(--clr-white);
+  padding: 20px;
+}
+
+.row {
+  width: 80%;
+  margin: auto;
+  padding: auto;
+}
+.col-15 {
+  float: left;
+  width: 15%;
+  margin-top: 6px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-50 {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 60%;
+  margin-top: 6px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .col-25,
+  .col-75,
+  .col-15,
+  input[type="submit"] {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
