--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -342,3 +342,36 @@ p {
 .items {
   margin: 20px;
 }
+
+
+
+/*
+=============== 
+Table Styles
+===============
+*/
+
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 80%;
+  margin: auto;
+}
+
+#customers td, #customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background: var(--clr-grey-1);
+  color: white;
+  
+}
