--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -301,11 +301,13 @@ input[value="Supprimer"]:hover {
     margin-top: 10px;
   }
 }
+
 /*
 =============== 
 Links Styles
 ===============
 */
+
 .container-links {
   margin: 10px;
   align-items: center;
@@ -353,28 +355,28 @@ Table Styles
 ===============
 */
 
-#customers {
+#table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 80%;
   margin: auto;
 }
 
-#customers td,
-#customers th {
+#table td,
+#table th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#customers tr:nth-child(even) {
+#table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-#customers tr:hover {
+#table tr:hover {
   background-color: #ddd;
 }
 
-#customers th {
+#table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
