--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -2,7 +2,6 @@
 
 :root {
   --clr-primary-1: hsl(205, 86%, 17%);
-  --clr-black: #222;
   --clr-grey-10: hsl(210, 36%, 96%);
   --clr-grey-1: hsl(209, 61%, 16%);
   --ff-primary: "Roboto", sans-serif;
@@ -11,9 +10,7 @@
   --spacing: 0.1rem;
   --radius: 0.25rem;
   --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   --max-width: 1170px;
-  --fixed-width: 620px;
 }
 
 /*
@@ -124,7 +121,6 @@ nav {
 .nav-header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   padding: 1rem;
 }
 
@@ -320,8 +316,11 @@ Links Styles
   margin: 40px 20px;
   padding: 20px;
   width: 80%;
-
   box-shadow: var(--light-shadow);
+}
+
+.link-title{
+  text-decoration: underline;
 }
 
 a {
@@ -336,13 +335,19 @@ p {
   text-align: justify;
 }
 
-.error {
-  background-color: #f44336;
+.message {
   color: white;
   font-weight: bold;
   font-size: 25px;
-  width: 40%;
   margin: 15px auto;
+}
+
+.error {
+  background-color: #f44336;
+}
+
+.success {
+  background-color: #60b560;
 }
 
 .items {
